container/kubernetes/yaml/nacos.yml
#创建namespace
apiVersion: v1
kind: Namespace
metadata:
  name: nacos
  labels:
    name: nacos
---
#nacos StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
  namespace: nacos
spec:
  serviceName: nacos-headless
  selector:
    matchLabels:
      app: nacos
  replicas: 3
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nacos
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: nacos
          image: nacos/nacos-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8848
              name: server
            - containerPort: 7848
              name: rpc
---
#暴露内部端口
apiVersion: v1
kind: Service
metadata:
  name: nacos-headless
  labels:
    app: nacos-headless
  namespace: nacos
spec:
  ports:
    - port: 8848
      name: server
    - port: 7848
      name: rpc
  publishNotReadyAddresses: true
  selector:
    app: nacos
  clusterIP: None
---
#暴露外部端口
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nacos-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: host.touchfishes.com
      http:
        paths:
          - path: /nacos
            backend:
              serviceName: nacos-headless
              servicePort: 8848
